--- a/lab2/facebook.html
+++ b/lab2/facebook.html
@@ -13,6 +13,17 @@
                 <img src="https://i.postimg.cc/NMyj90t9/logo.png" alt="Facebook">
                 <p>Facebook помогает вам всегда оставаться на связи и общаться со своими знакомыми.</p>
             </div>
+            <div class="form-box">
+                <form action="#">
+                    <input type="text" placeholder="Электронный адресс или номер телефона">
+                    <input type="password" placeholder="Пароль">
+                    <button type="submit">Вход</button>
+                    <a href="#">Забыли пароль?</a>
+                </form>
+                <hr>
+                <div create="create-btn">
+                    <a href="#">Создать аккаунт</a>
+            </div>
         </div>
     </body>
 </html>
